# pyeds-editor

./: .gitignore  LICENSE  README.md  ULM_motor_management_v2.eds.meta.json  main.py  pdo_mapper.py  pyproject.toml  sample.eds
.github/workflows/: publish.yml
profiles/: 301.json  402.json
src/pycanopen_editor/: main.py  models.py  object_wizard.py  pdo_mapper.py
src/pycanopen_editor/profiles/: 401.json  406.json  442.json
